# english

./: .gitignore  README.md
app/: README.md  pubspec.yaml
app/android/: build.gradle.kts
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/api/: api_client.dart
app/lib/core/: app_theme.dart  constants.dart  pos_colors.dart
app/lib/models/: card.dart  deck.dart  similar_word.dart  study_mode.dart
app/lib/providers/: auth_provider.dart  youtube_provider.dart
app/lib/screens/: add_word_screen.dart  bulk_add_words_screen.dart  deck_screen.dart  generate_words_screen.dart  home_screen.dart  ielts_exam_screen.dart  ielts_listening_screen.dart  (+8 more)
app/linux/: CMakeLists.txt
app/scripts/: get_sha1.sh
backend/: .env.example  Untitled  alembic.ini  requirements.txt  seed_bank.py  test_youtube_endpoints.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  middleware.py
backend/scripts/: INSTALL_PGVECTOR.md  check_db.py  init_db.py  install_pgvector.py
desktop/: nuxt.config.ts  package-lock.json  package.json
desktop/composables/: useApi.ts
desktop/layouts/: default.vue
desktop/middleware/: auth.global.ts
desktop/pages/: exam.vue  index.vue  listening.vue  login.vue  translator.vue  writing.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/stores/: auth.ts
worker/: QUICKSTART.md  README.md  install.sh  main.py  requirements.txt
(+50 files in other folders)
